--- a/tests/TailoredApps.Shared.Email.Tests/TailoredApps.Shared.Email.Tests.csproj
+++ b/tests/TailoredApps.Shared.Email.Tests/TailoredApps.Shared.Email.Tests.csproj
@@ -1,27 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>net5.0;net6.0;net7.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>net8.0</TargetFrameworks>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
 		<IsPackable>false</IsPackable>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0"  />
+		<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
-
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.*"  Condition="'$(TargetFramework)' == 'net6.0'"/>
-		
-		<PackageReference Include="Microsoft.Extensions.Hosting" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Configuration" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.*"  Condition="'$(TargetFramework)' == 'net5.0'"/>
 
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.*" />
 		<PackageReference Include="xunit" Version="2.*" />
