--- a/src/TailoredApps.Shared.Email/TailoredApps.Shared.Email.csproj
+++ b/src/TailoredApps.Shared.Email/TailoredApps.Shared.Email.csproj
@@ -7,9 +7,9 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
 		
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'"/>
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
