--- a/src/TailoredApps.Shared.EntityFramework/TailoredApps.Shared.EntityFramework.csproj
+++ b/src/TailoredApps.Shared.EntityFramework/TailoredApps.Shared.EntityFramework.csproj
@@ -8,8 +8,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
-		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.0.0" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
 
 		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
