--- a/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
+++ b/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
@@ -16,10 +16,10 @@
 		<PackageReference Include="Polly" Version="8.2.0" />
 		<PackageReference Include="Scrutor" Version="4.2.2" />
 		
-		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
 
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
