--- a/src/TailoredApps.Shared.Payments.Provider.CashBill/TailoredApps.Shared.Payments.Provider.CashBill.csproj
+++ b/src/TailoredApps.Shared.Payments.Provider.CashBill/TailoredApps.Shared.Payments.Provider.CashBill.csproj
@@ -7,11 +7,11 @@
 	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Options" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
 		
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.*" Condition="'$(TargetFramework)' == 'net7.0'" />
