--- a/src/TailoredApps.Shared.Payments/TailoredApps.Shared.Payments.csproj
+++ b/src/TailoredApps.Shared.Payments/TailoredApps.Shared.Payments.csproj
@@ -7,8 +7,8 @@
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
-		<PackageReference Include="Microsoft.Extensions.Primitives" Version="8.0.0"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Primitives" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
 
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
 		<PackageReference Include="Microsoft.Extensions.Primitives" Version="7.*"  Condition="'$(TargetFramework)' == 'net7.0'"/>
