--- a/src/TailoredApps.Shared.Email.Office365/TailoredApps.Shared.Email.Office365.csproj
+++ b/src/TailoredApps.Shared.Email.Office365/TailoredApps.Shared.Email.Office365.csproj
@@ -11,8 +11,8 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Microsoft.Identity.Web" Version="2.16.1" />
-		<PackageReference Include="MailKit" Version="4.3.0" />
+		<PackageReference Include="Microsoft.Identity.Web" Version="2.*" />
+		<PackageReference Include="MailKit" Version="4.*" />
 	</ItemGroup>
 
 	<ItemGroup>
