--- a/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
+++ b/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
@@ -12,9 +12,9 @@
 	<ItemGroup>
 		<PackageReference Include="FluentValidation" Version="11.*" />
 		<PackageReference Include="MediatR" Version="12.*" />
-		<PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-		<PackageReference Include="Polly" Version="8.2.1" />
-		<PackageReference Include="Scrutor" Version="4.2.2" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.*" />
+		<PackageReference Include="Polly" Version="8.*" />
+		<PackageReference Include="Scrutor" Version="4.*" />
 		
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.*" Condition="'$(TargetFramework)' == 'net8.0'" />
