--- a/src/TailoredApps.Shared.Payments.Provider.CashBill/TailoredApps.Shared.Payments.Provider.CashBill.csproj
+++ b/src/TailoredApps.Shared.Payments.Provider.CashBill/TailoredApps.Shared.Payments.Provider.CashBill.csproj
@@ -2,11 +2,17 @@
 
   <PropertyGroup>
 	  <SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-	  <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
+	  <TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 	  <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.*"  Condition="'$(TargetFramework)' == 'net9.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.*"  Condition="'$(TargetFramework)' == 'net9.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Options" Version="9.*"  Condition="'$(TargetFramework)' == 'net9.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.*"  Condition="'$(TargetFramework)' == 'net9.0'"/>
+		<PackageReference Include="System.Configuration.ConfigurationManager" Version="9.*"  Condition="'$(TargetFramework)' == 'net9.0'"/>
+
 		<PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
 		<PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
 		<PackageReference Include="Microsoft.Extensions.Options" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
