--- a/src/TailoredApps.Shared.Payments/TailoredApps.Shared.Payments.csproj
+++ b/src/TailoredApps.Shared.Payments/TailoredApps.Shared.Payments.csproj
@@ -2,11 +2,14 @@
 
 	<PropertyGroup>
 		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
-		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
+		<TargetFrameworks>net6.0;net8.0;net9.0</TargetFrameworks>
 		<GeneratePackageOnBuild>True</GeneratePackageOnBuild>
 		<GenerateDocumentationFile>True</GenerateDocumentationFile>
 	</PropertyGroup>
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.*"  Condition="'$(TargetFramework)' == 'net9.0'"/>
+		<PackageReference Include="Microsoft.Extensions.Primitives" Version="9.*"  Condition="'$(TargetFramework)' == 'net9.0'"/>
+
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
 		<PackageReference Include="Microsoft.Extensions.Primitives" Version="8.*"  Condition="'$(TargetFramework)' == 'net8.0'"/>
 
