--- a/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
+++ b/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
@@ -29,7 +29,7 @@
 		<PackageReference Include="MediatR" Version="12.*" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.*" />
 		<PackageReference Include="Polly" Version="8.*" />
-		<PackageReference Include="Scrutor" Version="4.*" />
+		<PackageReference Include="Scrutor" Version="5.0.2" />
 
 		<PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
 		<PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.*" Condition="'$(TargetFramework)' == 'net9.0'" />
