--- a/src/TailoredApps.Shared.MediatR.Email/TailoredApps.Shared.MediatR.Email.csproj
+++ b/src/TailoredApps.Shared.MediatR.Email/TailoredApps.Shared.MediatR.Email.csproj
@@ -12,7 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MediatR" Version="13.*" />
+		<PackageReference Include="MediatR" Version="12.0.1" />
 	</ItemGroup>
 
 	<ItemGroup>
