--- a/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
+++ b/src/TailoredApps.Shared.MediatR/TailoredApps.Shared.MediatR.csproj
@@ -26,7 +26,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="FluentValidation" Version="12.*" />
-		<PackageReference Include="MediatR" Version="13.*" />
+		<PackageReference Include="MediatR" Version="12.0.1" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.*" />
 		<PackageReference Include="Polly" Version="8.*" />
 		<PackageReference Include="Scrutor" Version="6.1.0" />
